pdk/1.7/modules/ROOT/pages/policies-pdk-configure-features-stop.adoc
= Stopping Request and Response Execution
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Flex Gateway Policy Development Kit (PDK) enables you to send early responses during the request and response execution to terminate the execution flow.

To intercept and stop a request or response, return a `Response` object from your `on_request` or `on_response` wrapped functions:

[source,Rust]
----
Response::new(401)
    .with_headers(vec![("WWW-Authenticate".to_string(), "Bearer realm=\"oauth2\"".to_string())])
    .with_body(r#"{ "error": "token was not present"}"#)
----

To return the `Response`object, see:

* <<stop-request-execution>>
* <<stop-response-execution>>

[[stop-request-execution]]
== Stop Request Execution

Block or allow requests to reach the upstream service using a `Flow`. A `Flow` in an `enum` value with two possible values:

* `Continue`: Defines an object that is forwarded to the response.
* `Break`: Aborts the request and returns the provided response.

Create a `Flow` as follows:

[source,Rust]
----
async fn request_filter(request_state: RequestState) -> Flow<()> {
    let header_state = request_state.into_headers_state().await;
    let handler = header_state.handler();
    if handler.header("authorization").is_some() {
        Flow::Continue(())
    } else {
        Flow::Break(Response::new(401)
        .with_headers(vec![("WWW-Authenticate".to_string(), "Bearer realm=\"oauth2\"".to_string())])
        .with_body(r#"{ "error": "token was not present"}"#))
    }
}
----

[IMPORTANT]
====
Due to the streaming nature of `proxy wasm`, it is possible for an early request to partially reach the upstream service while awaiting the `headers_state.into_body_state` function. Avoid this is by not awaiting the body. However, this is not possible for all policies. Configure your upstream to ignore partial requests if the policy must read the body.

To avoid early responses reaching the client, see xref:policies-pdk-configure-features-share-data.adoc[].
====

[[stop-response-execution]]
== Stop Response Execution

To send an early response during the `on_response` phase, use the `send_response` method of the `ResponseHeadersState` to return a `Response` object:

[source,Rust]
----
pub fn send_response(self, response: Response) {
----

The `send_response` method enables you to add a body to responses that don't already have one. Sending an early response using the `send_response` method terminates the execution flow. You can't perform any other operation after sending an early response:

[source,Rust]
----
async fn response_filter(state: ResponseState) {
   let state = state.into_headers_state().await;


   state.send_response(
       Response::new(200)
           .with_headers(vec![("some".to_string(), "200".to_string())])
           .with_body("Some"),
   );
}
----

== See Also

* xref:policies-pdk-configure-features.adoc[]